# fluence

./: .dockerignore  Dockerfile  Makefile  README.md  go.mod  go.sum
.devcontainer/: Dockerfile  Dockerfile.old  devcontainer.json
.github/workflows/: build-deploy.yaml  e2e-suite.yaml  e2e-tests.yaml  sidecar-build-deploy.yaml  unit-tests.yaml
cmd/deviceplugin/: main.go
cmd/fluence/: main.go
cmd/recovery-probe/: main.go
cmd/webhook/: main.go
config/: quantum-backends.yaml
deploy/: device-plugin.yaml  fluence-pull-test.yaml  fluence-resources-test.yaml  fluence-resources.yaml  fluence-test.yaml  fluence.yaml  kind-config.yaml
docker/: Dockerfile
docs/: coordination-handler-design.md  handlers.md  quantum-scheduling.md
examples/: multi-gang-contention.yaml  multi-gang-requeue.yaml  multi-gang.yaml  podgroup.yaml  quantum-pod.yaml  single-podgroup.yaml
examples/test/: cluster.jgf  jobspec-cpu.yaml  jobspec-qpu.yaml  quantum-pod-mock-2.yaml
pkg/cluster/: cluster.go  cluster_test.go  resources.go  resources_graph.go  resources_graph_test.go  resources_test.go
pkg/deviceplugin/: plugin.go
pkg/fluence/: enqueue.go  enqueue_test.go  fluence.go  fluence_test.go
pkg/graph/: allocation.go  allocation_test.go  graph.go  (+3 more)
python/: Dockerfile  README.md  pyproject.toml
python/fluence/: __init__.py  interceptor.py  sidecar.py  sitecustomize.py  stage.py  ungate.py
python/fluence/providers/: __init__.py  base.py  braket.py
python/tests/: test_batch_ungate.py  test_fluence.py
sidecars/: .gitignore  Dockerfile  README.md  build-interceptor.sh  design.md
(+71 files in other folders)
